# pathman

./: Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: test.yaml
examples/: append_to_path_unix.rs  append_to_path_windows.rs  prepend_to_path_unix.rs  prepend_to_path_windows.rs
src/: error.rs  lib.rs
src/platform/: mod.rs
src/platform/unix/: mod.rs  shell.rs
src/platform/windows/: mod.rs
tests/: unix.rs
